--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   </head>
   <body>
     <main>
-      <h1>example.com</h1>
-      <p>Our website is under construction.</p>
+      <h1>LaQueza-Construction.com</h1>
+      <p>Our website is now building.</p>
     </main>
   </body>
 </html>
